--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-asgiref==3.5.2
-backports.zoneinfo==0.2.1
-Django==4.1.2
-django-jenkins==0.110.0
-sqlparse==0.4.3
+asgiref
+backports.zoneinfo
+Django
+django-jenkins
+sqlparse
